language/move-lang/tests/move_check/unit_test/expected_failure_out_of_range_value.unit_test.exp
error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_out_of_range_value.move:16:35
   │
16 │     #[expected_failure(abort_code=18446744073709551616)]
   │                        -----------^^^^^^^^^^^^^^^^^^^^
   │                        │          │
   │                        │          Invalid value in expected failure code assignment
   │                        Unsupported value in this assignment

